# pbpt

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Doxyfile.in  GEMINI.md  README.md  REFACTORING_SUMMARY.md  build_debug.sh  build_log.txt  build_log2.txt  build_release.sh  cbox_render.exr  cbox_render_mi.exr  conanfile.py  generate_pbpt_header.py  main.py  mkdocs.yml  output_refactored.exr  output_refactored_instance.exr  output_test.exr  pyproject.toml  sensor.md  simple_scene_green.exr  simple_scene_white.exr  test_debug_spherical.cpp
examples/: CMakeLists.txt  cbox.cpp  cbox_caustics.cpp  cbox_checkerboard_texture.cpp  cbox_cu_spec.cpp  cbox_diele_spec.cpp  cbox_microfacet.cpp  cbox_microfacet_aniso.cpp  cbox_microfacet_compare.cpp  cbox_rough.cpp  cornell_box_scene.cpp  function_test.cpp  image_io.cpp  light_scene.cpp  main.cpp  pbpt_cli.cpp  render_scene.cpp  rgb2spec_opt.cpp  simple_scene.cpp  spectrum_scene.cpp  third_party.cpp  triangle_scene.cpp  white_furnace_compare.cpp
main/: CMakeLists.txt  backend_test.cpp  function_test.cpp  main.cpp  pbpt.cpp  pbpt_test.cpp  rgb2spec_opt.cpp
src/: CMakeLists.txt  pbpt.h
src/aggregate/: aggregate.hpp  aggregate_type.hpp  embree_aggregate.hpp
src/aggregate/plugin/: plugin.hpp
src/camera/: camera-code.txt  camera.h  camera.hpp  camera_projection.hpp  camera_projective.hpp  camera_sample.hpp  camera_system.hpp  camera_transform.hpp  camera_type.hpp  film.hpp  film_type.hpp  pixel_filter.hpp  pixel_filter_type.hpp  pixel_sensor.hpp  projective_camera.hpp  render_tranform.hpp  render_transform.hpp  spherical_camera.hpp
src/core/: camera.hpp  color.hpp  film.hpp  interaction.hpp  radiometric_integrals.hpp  radiometry.hpp  scene.hpp  shape.hpp  spectrum.hpp
src/geometry/: bounds.hpp  directional_cone.hpp  frame.hpp  geometry.h  interaction.hpp  ray.hpp  spherical.hpp  transform.hpp
src/integrator/: domain.hpp  integrator.h  integrator.hpp  monte_carlo.hpp  path_integrator.hpp
src/lds/: independent.hpp  lds_sampler.hpp
src/light/: area_light.hpp  light.hpp  light_type.hpp  solid_angle_area_light.hpp  visibility_tester.hpp
src/loader/: basic_parser.hpp  loader_context.hpp  scene_loader.hpp  transform_loader.hpp
src/material/: bsdf.hpp  bsdf_type.hpp  bxdf.hpp  bxdf_type.hpp  dielectric_bxdf.hpp  lambertian_bxdf.hpp  material-code.txt  material.hpp  material_type.hpp  model.hpp  optics.hpp  utils.hpp
src/math/: CMakeLists.txt  complex.hpp  format.hpp  function.hpp  homogeneous.hpp  interval.hpp  math.h  matrix.hpp  normal.hpp  octahedral.hpp  operator.hpp  point.hpp  polynomial.hpp  random_generator.hpp  sampling.hpp  tuple.hpp  type_alias.hpp  utils.hpp  vector.hpp  vector_base.hpp  vector_ops.hpp
src/pbpt/: aggregate  lds  pbpt.h  radiometry  sampler  scene  shape
src/radiometry/: color.hpp  color_space.hpp  color_spectrum_lut.hpp  color_spectrum_optimizer.hpp  function.hpp  radiometric_integrals.hpp  radiometry.h  radiometry_units.hpp  rgb_to_spectrum_lut.hpp  sampled_spectrum.hpp  spectrum_distribution.hpp  spectrum_distribution_type.hpp  spectrum_loader.hpp  spectrum_utils.hpp
src/sampler/: 1d.hpp  2d.hpp  3d.hpp  utils.hpp
src/scene/: cbox_scene.hpp  cbox_scene_test.hpp  cornel_box_scene.hpp  light_scene.hpp  scene.hpp  simple_scene.hpp  triangle_scene.hpp
src/shape/: primitive.hpp  shape.hpp  shape_type.hpp  sphere.hpp  triangle.hpp  triangle_mesh.hpp
src/texture/: image.hpp  texture.hpp
src/utils/: exr_writer.hpp  image_io.hpp  info.hpp  library.hpp  obj_loader.hpp  progress_bar.hpp  spectrum_loader.hpp  visit_any.hpp
test/: CMakeLists.txt  README_STRUCTURE.md
test/aggregate/: CMakeLists.txt  test_aggregate.cpp
test/camera/: CMakeLists.txt  test_camera.cpp  test_hdr_film.cpp  test_pixel_filter.cpp  test_pixel_sensor.cpp  test_projective_camera.cpp  test_render_transform.cpp  test_rgb_film.cpp  test_spherical_camera.cpp
test/core/: CMakeLists.txt  test_color.cpp  test_interaction.cpp  test_radiometric_integrals.cpp  test_radiometry.cpp  test_spectrum.cpp
test/ext/: CMakeLists.txt  test_opengl.cpp  test_render_backend.cpp  test_render_backend.hpp  test_render_backend_opengl.cpp  test_render_backend_vulkan.cpp  test_vulkan.cpp
test/geometry/: CMakeLists.txt  test_bounds.cpp  test_directional_cone.cpp  test_frame.cpp  test_interaction.cpp  test_ray.cpp  test_spherical.cpp  test_transform.cpp
test/integrator/: CMakeLists.txt  test_integration.cpp  test_integrator.cpp  test_sampler.cpp
test/light/: CMakeLists.txt  test_light.cpp
test/light_sampler/: CMakeLists.txt  test_uniform_light_sampler.cpp
test/loader/: CMakeLists.txt  test_scene_loader_fail_fast.cpp  test_scene_loader_matrix.cpp  test_scene_loader_reflectance_rgb.cpp  test_scene_loader_texture_reflectance.cpp  test_scene_roundtrip.cpp  test_scene_serde_components.cpp
test/material/: CMakeLists.txt  test_bxdf.cpp  test_microfacet_model.cpp
test/math/: CMakeLists.txt  README_octahedral_tests.md  test_algebra_verify.cpp  test_bounding_box.cpp  test_complex.cpp  test_directional_cone.cpp  test_frame.cpp  test_homo.cpp  test_homo_enhanced.cpp  test_integration.cpp  test_interval.cpp  test_matrix.cpp  test_matrix_enhanced.cpp  test_matrix_performance.cpp  test_matrix_row_operations.cpp  test_matrix_transform.cpp  test_normal.cpp  test_octahedral.cpp  test_point.cpp  test_point_eps.cpp  test_quaternion.cpp  test_ray.cpp  test_sampler.cpp  test_sampling.cpp  test_spherical.cpp  test_transform.cpp  test_tuple.cpp  test_type_alias.hpp  test_vec.cpp  test_vector.cpp
test/radiometry/: CMakeLists.txt  test_color.cpp  test_radiometric_integrals.cpp  test_radiometry.cpp  test_spectrum.cpp
test/sampler/: CMakeLists.txt  test_1d.cpp  test_2d.cpp  test_3d.cpp  test_utils.cpp
test/shape/: CMakeLists.txt  test_sphere.cpp  test_triangle.cpp
test/texture/: CMakeLists.txt  test_mipmap.cpp  test_rsp_spectrum_texture.cpp  test_texture_sampling.cpp
test/utils/: CMakeLists.txt  test_execution_profiler.cpp  test_image_io.cpp  test_library.cpp  test_visit_any.cpp
(+1052 files in other folders)
