[project]
name = "pbpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "conan>=2.21.0",
    "matplotlib>=3.10.6",
    "mitsuba>=3.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-static-i18n>=1.3.0",
    "numpy>=2.3.3",
    "xatlas>=0.0.11",
]
