include(CTest)
include(GoogleTest)

set(CMAKE_GTEST_DISCOVER_TESTS_DISCOVERY_MODE PRE_TEST)

add_subdirectory(radiometry)
add_subdirectory(math)
add_subdirectory(geometry)
add_subdirectory(camera)
add_subdirectory(shape)
add_subdirectory(integrator)
add_subdirectory(light)
add_subdirectory(aggregate)
add_subdirectory(sampler)
add_subdirectory(utils)
