
option(BUILD_RENDER_BACKEND_TEST "Build render backend test" OFF)

if (BUILD_RENDER_BACKEND_TEST)

add_executable(test_render_backend_opengl test_render_backend_opengl.cpp)
target_link_libraries(test_render_backend_opengl PRIVATE pbpt_engine)
add_runtime_dependency_copy_step(test_render_backend_opengl ${ext_move_lib})
gtest_discover_tests(test_render_backend_opengl)

add_executable(test_render_backend_vulkan test_render_backend_vulkan.cpp)
target_link_libraries(test_render_backend_vulkan PRIVATE pbpt_engine)
add_runtime_dependency_copy_step(test_render_backend_vulkan ${ext_move_lib})
gtest_discover_tests(test_render_backend_vulkan)

endif()
